1998-08-26  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* lisp/gnus-art.el (gnus-article-narrow-to-signature):
	Removed TM stuff.
	(gnus-article-display-mime-message):
	Set `mime-button-mother-dispatcher' in correct buffer.
	(gnus-url-mailto): Use `gnus-setup-message'.
	(gnus-button-mailto): Ditto.
	(gnus-button-reply): Ditto.

	* lisp/gnus-ems.el (gnus-mule-max-width-function): Removed.
	(gnus-truncate-string): Use `truncate-string-to-width' if available.
	(gnus-tilde-max-form): New implementation.
	(gnus-tilde-cut-form): Ditto.

	* lisp/gnus-msg.el (gnus-summary-mail-digest): New function.
	(gnus-summary-post-digest): New function.

	* lisp/gnus-sum.el (gnus-summary-make-menu-bar): Use
	`gnus-summary-mail-digest' and `gnus-summary-post-digest' instead
	of `gnus-uu-digest-mail-forward' and `gnus-uu-digest-post-forward'.

	* lisp/gnus-util.el (gnus-truncate-string): Ignore more than two
	arguments.

	* lisp/message.el (message-forward-end-separator): Use
	`text/plain' tag.

1998-08-23  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* lisp/message.el: Suppress some byte-compile warnings.
	(message-make-forward-subject): Failed to sync.
	(message-setup): Ditto.
	(message-clone-locals): Modify regexp.

1998-08-23  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* lisp/gnus-agent.el (gnus-agent-braid-nov): Use
	`nnheader-insert-file-contents'.

	* lisp/gnus-i18n.el (gnus-set-summary-default-charset): Sync up
	with "akr" branch.

1998-08-23  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.15.

	* Sync up with Gnus 5.6.39.

	* lisp/pop3-fma.el (pop3-fma-movemail): Enable to get from APOP server.
	(pop3-fma-set-pop3-password) Enable to get from APOP server.

1998-08-20  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* lisp/message.el (message-clone-locals): Add `user-full-name'
	and `user-mail-address' to regexp.

1998-08-20  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
